[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resurses/UserInterfase/Defult_theme.tres" type="Theme" id=1]
[ext_resource path="res://Resurses/UserInterfase/Shrifts/Big_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=3]
[ext_resource path="res://Resurses/UserInterfase/UI-Sprites/Back.png" type="Texture" id=4]
[ext_resource path="res://Resurses/UserInterfase/UI-Sprites/Play.png" type="Texture" id=5]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.121569, 0.623529 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -122.0
margin_right = 184.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.5
margin_top = 16.0
margin_right = 77.5
margin_bottom = 69.0
theme = SubResource( 1 )
text = "Pause"
align = 1

[node name="Play" type="TextureButton" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 27.0
margin_top = -149.0
margin_right = 150.0
margin_bottom = -26.0
texture_normal = ExtResource( 5 )

[node name="Play" type="Label" parent="Panel/Play"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.5
margin_top = -27.0
margin_right = 67.5
text = "Countinue"

[node name="Back" type="TextureButton" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -149.0
margin_right = -12.0
margin_bottom = -26.0
texture_normal = ExtResource( 4 )

[node name="Back" type="Label" parent="Panel/Back"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.5
margin_top = -27.0
margin_right = 70.5
text = "Go to menu"

[connection signal="mouse_entered" from="Panel/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Panel/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Panel/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_Back_pressed"]
